# gen_consult

./: .cursorrules  .gitignore  AGENTS.md  CI.md  CLAUDE.md  DOCUMENTATION_ORGANIZATION.md  MCP_AUTHENTICATION_SUMMARY.md  MCP_DOCUMENTATION_PLAN.md  MCP_SETUP_SUMMARY.md  README.md  SETUP.md  TODO.md  USER_STORIES.MD  cursor-multi-root.code-workspace
.agent/skills/: models-as-source-of-truth.md
TODO/: api-key-auth-integration-tests.md
agent-plans/: backend-ci-optimization.md
business/: business_model_canvas.md  risks.md  speckit-insights.md
customer-ux/: ARCHITECTURE.md  PROMPT_BUILDER_STRUCTURE.md  README.md  package-lock.json  package.json  vite.config.js
declaring/: .coveragerc  AGENT_WORKFLOW.md  AGENT_WORKFLOW_SUMMARY.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_STANDARDS.md  CLOUD_NATIVE_LOGGING.md  DEVELOPMENT_STANDARDS.md  Dockerfile  EXCEPTION_HANDLING_GUIDE.md  EXCEPTION_HANDLING_STANDARDS.md  EXPOSE_VIA_TUNNEL.md  LINTING_GUIDE.md  LINTING_STANDARDS.md  LOGGING_ARCHITECTURE.md  LOGGING_STANDARDS.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  STRUCTURED_LOGGING_EXAMPLES.md  TESTING_GUIDE.md  TESTING_STANDARDS.md  docker-compose.yml  lint.sh  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  validate.sh
intentions/: .dockerignore  AGENT_WORKFLOW.md  AGENT_WORKFLOW_SUMMARY.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_STANDARDS.md  DEBUGGING.md  DEVELOPMENT_STANDARDS.md  Dockerfile  EXCEPTION_HANDLING_STANDARDS.md  LINTING_GUIDE.md  LINTING_STANDARDS.md  LOGGING_GUIDE.md  MCP_DOCUMENTATION_STANDARDS.md  PII_PRIVACY_GUIDE.md  PYTHON_IDIOM_STANDARDS.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  lint.sh  main.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  validate.sh
intentions/app/: main.py
intentions/app/intents/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  INTENTS_DOMAIN_V2.md  MCP_CLIENT_ERROR_ANALYSIS.md  __init__.py  db_models.py  events.py  mcp_http.py  mcp_sdk_http.py  mcp_server.py  mcp_sse.py  models.py  repository.py  router.py  schemas.py  service.py
intentions/app/shared/: __init__.py  dependencies.py  events.py  exception_handlers.py  logging_config.py  schemas.py
intentions/app/users/: __init__.py  db_models.py  events.py  models.py  repository.py  router.py  service.py
intentions/tests/: conftest.py
intentions/tests/api/: test_api_key_auth.py  test_intents_api.py  test_mcp_http.py  test_users_api.py
intentions/tests/fixtures/: intents.py  users.py
intentions/tests/integration/intents/: test_service_integration.py
intentions/tests/integration/users/: test_service_integration.py
intentions/tests/mcp/: test_intents_mcp_server.py
intentions/tests/unit/intents/: test_models.py  test_repository.py  test_service.py
intentions/tests/unit/shared/: test_dependencies.py  test_events.py  test_exception_handlers.py
intentions/tests/unit/users/: __init__.py  test_models.py  test_repository.py
prototyping/: Insights_response.json  PoC.md  meta-prompt.md
reacting/: ARCHITECTURE.md  PROMPT_BUILDER_STRUCTURE.md  README.md  index.html  package-lock.json  package.json
reviews/: pr-27-skill-review.md
(+152 files in other folders)
