[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentions"
version = "0.1.0"
description = "A FastAPI backend with comprehensive testing and logging"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.1",
    "pydantic==2.12.5",
    "python-multipart==0.0.12",
    "mcp==1.26.0",
    # Database
    "sqlalchemy==2.0.46",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.3",
    "greenlet==3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "flake8==7.1.1",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
]

# Black - Code Formatter
[tool.black]
line-length = 127
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | htmlcov
)/
'''

# isort - Import Sorter
[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "htmlcov/*"]
known_first_party = ["app", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# mypy - Type Checker
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# pytest - Testing Framework
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "unit: Fast unit tests with mocked dependencies",
    "integration: Integration tests with real dependencies",
    "api: Full HTTP stack tests",
    "slow: Tests taking > 1 second",
]
norecursedirs = [".git", ".venv", "venv", "__pycache__", "*.egg-info", "htmlcov"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

# Coverage.py - Code Coverage
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/htmlcov/*",
    "*/__pycache__/*",
    "*/mcp_server.py",  # MCP server entry point (infrastructure)
    "*/intents/mcp_server.py",  # MCP server module (infrastructure)
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

